# Nessiness

./: .gitignore  CNAME  Makefile  README.md  TODO.md  TODO.txt  archives.html  authors.html  captioning_with_ai.html  categories.html  fancy_dataclass.html  index.html  login.html  notes.txt  pelicanconf.py  profile.html  publishconf.py  pyproject.toml  reset_password.html  tags.html  tasks.py  welcome.html
.well-known/: site.standard.publication
2021/02/welcome/: index.html
2023/03/captioning_with_ai/: index.html
atproto/: document_registry.json  publication.json  sync_articles.py
author/: jeremy-silver.html
category/: atproto.html  machine-learning.html  news.html  posts.html  python.html
content/: _welcome.rst  welcome.md
content/pages/: about.md  links.md  projects.html  projects.md
content/posts/: 20210206_welcome.md  20230301_captioning_with_ai.md  20241020_fancy_dataclass.md  20260429_atproto_test.md  20260430_atmospheric_test.md  210206_welcome.md
drafts/: welcome.html
feed/: all.atom.xml  atom.xml
feeds/: all.atom.xml  atproto.atom.xml  jeremy-silver.rss.xml  machine-learning.atom.xml  news.atom.xml  posts.atom.xml  python.atom.xml
login/elegant/: login.html
pages/: about.html  links.html  projects.html
tag/: ai.html  atproto.html  machine-learning.html  nessiness.html  python.html  test.html  video.html
theme/js/: login.js  main.js  profile.js  utils.js
theme/stylesheet/: login.less  style.less  variables.less
theme/templates/: article.html  base.html  index.html  login.html  macros.html  page.html  profile.html  reset_password.html
(+17 files in other folders)
