[project]
name = "nessiness"
version = "0.1.0"
requires-python = ">=3.9"
description = "Nessiness website."
authors = [
    { name = "Jeremy Silver", email = "jeremys@nessiness.com" }
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
    "Markdown >= 3.3.6",
    "markdown-link-attr-modifier >= 0.2.0",
]

[tool.setuptools.packages.find]
where = []
include = []
namespaces = false
