[project]
name = "nessiness"
version = "2026.04"
requires-python = ">=3.9"
description = "Nessiness website."
authors = [
    { name = "Jeremy Silver", email = "jeremys@nessiness.com" }
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
    "dotenv",  # loading secrets in .env file
    "invoke",  # for tasks.py
    "livereload",
    "Markdown >= 3.3.6",
    "markdown-link-attr-modifier >= 0.2.0",
    "pelican[markdown]",
]

[tool.setuptools.packages.find]
where = []
include = []
namespaces = false
